--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="pt">
 
 <head>
-    <title>{% block title %}{% endblock %}CBU' Blog</title>
+    <title>{% block title %}{% endblock %}CBU's' Blog</title>
     {% include 'partials/_head.html' %}
 </head>
 
